kubernetes/base/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-demo
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: backend-ui-3030
    protocol: TCP
    port: 3030
    targetPort: 3030
