kubernetes/base/infra/route-be.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
spec:
  port:
    targetPort: 3030
  host: ocp-demo.apps.ocp4.rhpg.org
  path: /
  tls:
    termination: edge
  to:
    name: ocp-demo
    kind: Service
