kubernetes/base/infra/route-fe.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  port:
    targetPort: 8080
  host: ocp-demo-fe.apps.ocp4.rhpg.org
  path: /
  tls:
    termination: edge
  to:
    name: ocp-demo-frontend
    kind: Service
